<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/b28AAF6"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:padding="6dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.zjjxl.zjjxl_drawLayout_panda.utils.CircleImageView
                    android:id="@+id/draw_mine_minehead"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                     android:src="@mipmap/pandaapplogo" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/draw_main_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/nav_header_title"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mine_bannerpanda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@mipmap/mine_banna"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2">


                </LinearLayout>

                <Button
                    android:id="@+id/draw_mine_rely_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/draw_fragment_home_boxframe"
                    android:text="@string/draw_notlogin"
                    android:textColor="@color/fA4A4A4" />

            </LinearLayout>

            <Button
                android:id="@+id/button_cardequity"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/draw_life_anpai_boxframe"
                android:text="@string/draw_traintext"
                android:textColor="@color/ffffff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="40dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/draw_main_save"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/draw_savemoney" />

                <ImageView
                    android:id="@+id/draw_main_recharge"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:background="@mipmap/draw_recharge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/draw_main_train"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/draw_train" />

                <ImageView
                    android:id="@+id/draw_main_byorsend"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="10dp"
                    android:background="@mipmap/draw_byorsend" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/draw_menu_layout" />

</androidx.drawerlayout.widget.DrawerLayout>
